Thu Sep  8 16:39:10 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/tao.mpc:

	  Added AnyTypeCode_Adapter.h and Any_Insert_Policy_T.h
	  to list of Header_Files.

Wed Sep  7 15:54:08 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

Wed Sep  7 11:47:35 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/IIOP_Acceptor.cpp:

          Marker modified for the specializations to work properly.

Tue Sep  6 15:54:57 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Bug_2222_Regression/test.cpp:

	  Fixed unused argument warnings.

	* tests/DynAny_Test/test_dynany.cpp:
	* tests/DynAny_Test/test_dynunion.cpp:

	  More include directive reordering to address g++ 3.4 order of
	  parsing template related errors.

Tue Sep  6 15:40:17 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp (gen_stub_src_includes):

	  Reordered include directives to address CORBA::AbstractBase
	  order of parsing related template compile-time errors with g++
	  3.4 or better and some HP compilers.

Tue Sep  6 17:26:39 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Endpoint.h

          Accidentally committed a file with the instrumented
          code. Reverted this and updated the markers.

Tue Sep  6 16:12:04 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Connection_Handler.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Connector.h:
        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Endpoint.cpp:
        * tao/IIOP_Profile.h:
        * tao/Transport.h:
        * tao/Transport_Acceptor.h:

          The markers in these files accidentally includes the destructor
          which conflicts with the base class.

Tue Sep  6 13:29:04 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Profile.h:
        * tao/Transport_Acceptor.h:
        * tao/Profile.h:
