@@ -1,0 +1,9 @@
+// -*- MPC -*-
+// $Id$
+
+project (*Test) : taoserver {
+
+    Source_Files {
+        test.cpp
+    }
+}
