@@ -1,0 +1,12 @@
+// $Id$
+
+#include "TestS.h"
+
+/**
+* This test does not run - successful compile and link == successful test.
+*/
+int
+main (int, char *[])
+{
+  return 0;
+}
